--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -23,20 +23,27 @@
 
     <Button
         android:id="@+id/sign_up"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
         android:layout_centerHorizontal="true"
         android:layout_above="@id/sign_in"
         android:text="Sign up" />
 
     <Button
         android:id="@+id/sign_in"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
         android:layout_alignParentBottom="true"
         android:text="Sign in" />
+
+    <Button
+        android:id="@+id/menu_test"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_above="@id/sign_up"
+        android:layout_centerHorizontal="true"
+        android:text="Go to menu (test)" />
 
 
 </RelativeLayout>
