--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -18,27 +18,29 @@
         android:textSize="24sp" />
 
     <EditText
+        android:id="@+id/signUpEmailText"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_marginTop="20dp"
         android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_weight="1"
         android:ems="10"
         android:hint="E-mail"
-        android:inputType="textPersonName" />
+        android:inputType="textEmailAddress" />
 
     <EditText
+        android:id="@+id/signUpPasswordText"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_marginTop="20dp"
         android:layout_gravity="center"
-        android:hint="Password"
+        android:layout_marginTop="20dp"
+        android:layout_weight="1"
         android:ems="10"
+        android:hint="Password"
         android:inputType="textPassword" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/signUpRepeatPasswordText"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -49,13 +51,13 @@
         android:inputType="textPassword" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/signUpBasicButton"
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        android:layout_weight="1"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="15dp"
+        android:layout_weight="1"
         android:text="Sign up" />
 
     <TextView
@@ -67,22 +69,23 @@
         android:textAlignment="center" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/signUpFacebookButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_weight="1"
         android:layout_marginTop="40dp"
+        android:layout_weight="1"
         android:text="Sign Up with Facebook" />
 
     <Button
+        android:id="@+id/signUpGoogleButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
+        android:layout_weight="1"
         android:text="Sign Up with Google" />
 
 </LinearLayout>
