--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context="com.example.kamil.codelearn.SignUpActivity">
+    tools:context="com.company.codelearn.SignUpActivity">
 
     <TextView
         android:id="@+id/textView2"
