--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -68,24 +68,47 @@
         android:text="or"
         android:textAlignment="center" />
 
-    <Button
-        android:id="@+id/signUpFacebookButton"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="40dp"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:text="Sign Up with Facebook" />
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/signUpGoogleButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_weight="1"
-        android:text="Sign Up with Google" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/ce"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                android:baselineAlignBottom="false"
+                android:cropToPadding="false"
+                android:paddingLeft="80dp"
+                android:textAlignment="center"
+                app:srcCompat="@drawable/fblogo" />
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                android:paddingRight="80dp"
+                app:srcCompat="@drawable/googlelogo" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/signInSocial"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="15dp"
+            android:layout_weight="1"
+            android:text="Sign In with Facebook or Google" />
+
+    </LinearLayout>
 
 </LinearLayout>
