--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -52,8 +52,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_marginBottom="40dp"
         android:layout_marginTop="40dp"
+        android:layout_weight="1"
         android:text="or"
         android:textAlignment="center" />
 
