--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context="com.example.kamil.codelearn.SignUpActivity">
+    tools:context="com.company.codelearn.SignUpActivity">
 
     <TextView
         android:id="@+id/textView2"
@@ -18,27 +18,40 @@
         android:textSize="24sp" />
 
     <EditText
+        android:id="@+id/signUpNameText"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_marginTop="20dp"
         android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_weight="1"
         android:ems="10"
-        android:hint="E-mail"
-        android:inputType="textPersonName" />
+        android:hint="Name"
+        android:inputType="textEmailAddress" />
 
     <EditText
+        android:id="@+id/signUpEmailText"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_marginTop="20dp"
         android:layout_gravity="center"
-        android:hint="Password"
+        android:layout_marginTop="20dp"
+        android:layout_weight="1"
         android:ems="10"
+        android:hint="E-mail"
+        android:inputType="textEmailAddress" />
+
+    <EditText
+        android:id="@+id/signUpPasswordText"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_weight="1"
+        android:ems="10"
+        android:hint="Password"
         android:inputType="textPassword" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/signUpRepeatPasswordText"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -49,40 +62,65 @@
         android:inputType="textPassword" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/signUpBasicButton"
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        android:layout_weight="1"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="15dp"
+        android:layout_weight="1"
         android:text="Sign up" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
+        android:layout_marginTop="30dp"
         android:layout_weight="1"
-        android:layout_marginTop="40dp"
         android:text="or"
         android:textAlignment="center" />
 
-    <Button
-        android:id="@+id/button4"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:layout_marginTop="40dp"
-        android:text="Sign Up with Facebook" />
+        android:orientation="vertical">
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="10dp"
-        android:text="Sign Up with Google" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/ce"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                android:baselineAlignBottom="false"
+                android:cropToPadding="false"
+                android:paddingLeft="80dp"
+                android:textAlignment="center"
+                app:srcCompat="@drawable/fblogo" />
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                android:paddingRight="80dp"
+                app:srcCompat="@drawable/googlelogo" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/signInSocial"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="15dp"
+            android:layout_weight="1"
+            android:text="Sign In with Facebook or Google" />
+
+    </LinearLayout>
 
 </LinearLayout>
