--- a/app/src/main/res/layout/intro2_fragment.xml
+++ b/app/src/main/res/layout/intro2_fragment.xml
@@ -1,13 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_screen3">
+    android:background="@color/intro_bg_screen2">
+
+    <ImageView
+        android:id="@+id/image_intro_2"
+        android:layout_width="310dp"
+        android:layout_height="255dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        app:srcCompat="@drawable/image_intro_2" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_height="102dp"
+        android:layout_below="@id/image_intro_2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
@@ -17,8 +31,20 @@
             android:text="Solve the quizes"
             android:textColor="@android:color/white"
             android:textSize="@dimen/slide_title"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:fontFamily="@font/roboto_thin" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:text="To become more proficient"
+            android:textColor="#FFFFFF"
+            android:textSize="@dimen/slide_desc"
+            app:fontFamily="@font/roboto_thin" />
 
 
     </LinearLayout>
+
 </RelativeLayout>
