--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -23,6 +23,17 @@
 
 
     <Button
+        android:id="@+id/menu_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="159dp"
+        android:layout_above="@id/layoutDots"
+        android:background="#ffffff"
+        android:onClick="@"
+        android:text="Test" />
+
+    <Button
         android:id="@+id/sign_in"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
