--- a/app/src/main/res/layout/activity_invite_friends.xml
+++ b/app/src/main/res/layout/activity_invite_friends.xml
@@ -42,8 +42,9 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="bottom">
+
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/inviteButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="0px"
