--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content">
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/learn_tab"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -24,7 +24,7 @@
             android:visibility="visible" />
 
         <Button
-            android:id="@+id/button7"
+            android:id="@+id/quiz_tab"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -32,7 +32,7 @@
             android:text="QUIZ" />
 
         <Button
-            android:id="@+id/button8"
+            android:id="@+id/social_tab"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
