--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -6,9 +6,9 @@
     tools:context=".QuizFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/quiz_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="QUIZ" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
