--- a/app/src/main/res/drawable/custom_button_continue.xml
+++ b/app/src/main/res/drawable/custom_button_continue.xml
@@ -3,6 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="#FF3F51B5"/>
+            <corners android:radius="4dp"/>
         </shape>
     </item>
 </selector>
