--- a/app/src/main/res/layout/content_lecture_view.xml
+++ b/app/src/main/res/layout/content_lecture_view.xml
@@ -1,22 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fcf2f2"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_lecture_view"
-    android:orientation="vertical">
+    tools:showIn="@layout/activity_lecture_view">
 
-    <android.support.v4.widget.NestedScrollView
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:layout_height="wrap_content"
+        android:background="#fcf2f2"
+        android:orientation="vertical">
 
-        <RelativeLayout
+
+        <android.support.v4.widget.NestedScrollView
+            android:id="@+id/nestedView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            android:layout_margin="10dp"
+            android:background="@drawable/layout_border"
+            android:elevation="8dp"
+            android:fillViewport="true">
 
             <TextView
                 android:id="@+id/lectureText"
@@ -25,23 +32,46 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
+                android:layout_weight="1"
                 android:padding="8dp"
                 android:text="@string/large_text"
                 android:textColor="@android:color/black"
                 android:textSize="@dimen/slide_desc"
                 app:fontFamily="sans-serif" />
 
-            <Button
-                android:id="@+id/doneButton"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/lectureText"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/custom_button_continue"
-                android:gravity="center_vertical|center_horizontal|center"
-                android:text="Done, Go Back!" />
-        </RelativeLayout>
-    </android.support.v4.widget.NestedScrollView>
+        </android.support.v4.widget.NestedScrollView>
 
-</LinearLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp">
+
+            <Button
+                android:id="@+id/previousButton"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="4dp"
+                android:background="@drawable/custom_button_continue"
+                android:elevation="8dp"
+                android:text="Previous" />
+
+            <Button
+                android:id="@+id/continueButton"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="4dp"
+                android:background="@drawable/custom_button_continue"
+                android:elevation="8dp"
+                android:text="Continue" />
+        </RelativeLayout>
+
+
+    </LinearLayout>
+</ScrollView>
