--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,141 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout_2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-    <LinearLayout
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
+
+    <include
+        layout="@layout/app_bar_profile"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="top|center_horizontal"
-        android:orientation="vertical">
-        <ImageView
-            android:layout_width="146dp"
-            android:layout_height="139dp"
-            app:srcCompat="@drawable/profileico"
-            android:layout_marginTop="30dp"
-            tools:layout_editor_absoluteX="119dp"
-            tools:layout_editor_absoluteY="37dp" />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="Login"
-            android:textSize="40sp" />
-    </LinearLayout>
+        android:layout_height="match_parent" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:gravity="left"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="E-mail:"
-            android:textSize="30sp" />
-
-        <TextView
-            android:id="@+id/profile_email"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="right|center"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:text="myemail@dot.com"
-            android:textSize="20sp" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="16dp"
-        android:gravity="left"
-        android:layout_marginLeft="16dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Level:"
-            android:textSize="30sp" />
-
-        <TextView
-            android:id="@+id/profile_level"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="right|center"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:text="999"
-            android:textSize="20sp" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="16dp"
-        android:gravity="left"
-        android:layout_marginLeft="16dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Points:"
-            android:textSize="30sp" />
-
-        <TextView
-            android:id="@+id/profile_points"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="right|center"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:text="999"
-            android:textSize="20sp" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="left"
-        android:layout_marginLeft="16dp"
-        android:orientation="horizontal"
-        android:layout_marginTop="16dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Complete:"
-            android:textSize="30sp" />
-
-        <TextView
-            android:id="@+id/profile_cop"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="right|center"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:text="999"
-            android:textSize="20sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:gravity="bottom"
-        android:orientation="vertical">
+        android:layout_gravity="start"
+        android:fitsSystemWindows="false"
+        app:headerLayout="@layout/nav_header_main"
+        app:menu="@menu/activity_main_drawer">
 
-        <Button
-            android:id="@+id/editProfileButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:text="Edit profile" />
-    </LinearLayout>
+    </android.support.design.widget.NavigationView>
 
-</LinearLayout>
+</android.support.v4.widget.DrawerLayout>
