Added profile activity backend and edit profile activity

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context="com.company.codelearn.SignUpActivity">
+    tools:context="com.company.codelearn.EditProfileActivity">
 
     <TextView
         android:id="@+id/textView2"
@@ -18,7 +18,7 @@
         android:textSize="24sp" />
 
     <EditText
-        android:id="@+id/signUpNameText"
+        android:id="@+id/editCurrentName"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -30,7 +30,7 @@
         android:text="Current name" />
 
     <EditText
-        android:id="@+id/signUpEmailText"
+        android:id="@+id/editCurrentEmail"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -42,7 +42,7 @@
         android:text="Current e-mail" />
 
     <EditText
-        android:id="@+id/signUpPasswordText"
+        android:id="@+id/editPassword"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -53,7 +53,7 @@
         android:inputType="textPassword" />
 
     <EditText
-        android:id="@+id/signUpRepeatPasswordText"
+        android:id="@+id/editRepeatedPassword"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
