--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -23,6 +23,7 @@
             tools:layout_editor_absoluteY="37dp" />
 
         <TextView
+            android:id="@+id/profile_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Login"
