Added profile activity backend and edit profile activity

--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -23,7 +23,7 @@
         android:id="@+id/userLevel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Level:" />
+        android:text="Level: Junior" />
 
     <TextView
         android:id="@+id/userMail"
